# hypixel-bazaar-tui

./: Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs
src/api/: client.rs  models.rs
src/app/: search.rs  state.rs
src/events/: run.rs
src/ui/: views.rs
src/util/: mod.rs
